# mys_villa

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
change_logs/: 0.2.0.md  0.3.0.md
core/: Cargo.toml  LICENSE  README.md
core/change_logs/: 0.2.0.md
core/src/: api.rs  bot.rs  default_impl.rs  error.rs  http.rs  lib.rs  utils.rs
core/src/api/: api_error.rs  villa_bot_api.rs
core/src/api/villa_bot_api/: get_all_emoticons.rs  villa_api.rs  villa_response.rs
core/src/api/villa_bot_api/get_all_emoticons/: emoticon.rs
core/src/api/villa_bot_api/villa_api/: audit.rs  check_member_bot_access_token.rs  create_group.rs  create_member_role.rs  delete_villa_member.rs  get_group_list.rs  get_villa.rs  get_villa_group_room_list.rs  get_villa_member.rs  get_villa_member_roles.rs  group.rs  group_api.rs  group_room.rs  list_room.rs  member.rs  member_api.rs  member_role.rs  role_api.rs  room.rs  room_api.rs  send_msg_auth_range.rs  transfer_image.rs  villa_info.rs
core/src/api/villa_bot_api/villa_api/check_member_bot_access_token/: bot_member_access_info.rs
core/src/api/villa_bot_api/villa_api/group_api/: delete_group.rs  edit_group.rs
core/src/api/villa_bot_api/villa_api/member/: member_basic.rs
core/src/api/villa_bot_api/villa_api/member_api/: audit.rs  delete_villa_member.rs  get_member.rs
core/src/api/villa_bot_api/villa_api/member_role/: member_role_permission.rs
core/src/api/villa_bot_api/villa_api/role_api/: delete_member_role.rs  edit_member_role.rs  get_member_role_info.rs  operate_member_to_role.rs
core/src/api/villa_bot_api/villa_api/room_api/: delete_room.rs  edit_room.rs  get_room.rs  message_api.rs  msg_content_info.rs  send_message.rs
core/src/api/villa_bot_api/villa_api/room_api/message_api/: pin_message.rs  recall_message.rs
core/src/api/villa_bot_api/villa_api/room_api/msg_content_info/: msg_content.rs
core/src/api/villa_bot_api/villa_api/room_api/msg_content_info/msg_content/: msg_mhy_text.rs  msg_unknown.rs
core/src/api/villa_bot_api/villa_api/room_api/msg_content_info/msg_content/msg_mhy_text/: mhy_text_entity.rs
core/src/api/villa_bot_api/villa_api/room_api/msg_content_info/msg_content/msg_mhy_text/mhy_text_entity/: entity_data.rs
core/src/api/villa_bot_api/villa_response/: retcode.rs
core/src/bot/: bot_auth_info.rs  bot_builder.rs  bot_permission.rs  emoticon.rs  villa.rs
core/src/bot/bot_auth_info/: error.rs
core/src/bot/villa/: group.rs  group_info.rs  member.rs  member_info.rs  member_stream.rs  role.rs  role_info.rs  room.rs  room_info_detail.rs  villa_info.rs
core/src/bot/villa/member/: audit_info.rs
core/src/bot/villa/member/audit_info/: audit_content.rs
core/src/bot/villa/role_info/: role_color.rs  role_permission_info.rs  role_type.rs
core/src/bot/villa/role_info/role_permission_info/: role_permission_key.rs  role_permission_scope.rs
core/src/bot/villa/room/: message.rs  message_ident.rs  message_object.rs
core/src/bot/villa/room/message_object/: error.rs  message_content.rs
core/src/bot/villa/room/message_object/message_content/: error.rs  mhy_text.rs  unknown.rs
core/src/bot/villa/room/message_object/message_content/mhy_text/: error.rs  span.rs
core/src/bot/villa/room/message_object/message_content/mhy_text/span/: entity.rs
core/src/bot/villa/room/message_object/message_content/mhy_text/span/entity/: entity_at.rs  entity_link.rs  entity_style.rs  error.rs
core/src/bot/villa/room_info_detail/: room_allow_send_msg_range.rs  room_info.rs  room_notify_type.rs
core/src/bot/villa/room_info_detail/room_info/: room_type.rs
core/src/default_impl/: request_executor_impl.rs
core/src/default_impl/request_executor_impl/: error.rs
core/src/http/: header_map.rs  request.rs  request_executor.rs  response.rs
core/src/http/request/: body.rs  method.rs
core/src/http/request/body/: multipart.rs
core/src/http/request/body/multipart/: part.rs
core/src/http/response/: status_code.rs
core/src/utils/: enum_utils.rs  fp_utils.rs  serde_utils.rs
examples/: send_request.rs
old/: Cargo.toml
src/: bot.rs  (+6 more)
(+209 files in other folders)
