[package]
name = "mys_villa"
version = "0.2.0"
edition = "2021"
description = "provide simple access to villa open api"
authors = ["Golden_Water"]
repository = "https://github.com/BillGoldenWater/mys_villa.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
thiserror = "1.0.40"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde-aux = { version = "4.2.0", default-features = false }

sha2 = "0.10.7"
hmac = "0.12.1"
rsa = { version = "0.9.2", features = ["sha2"] }

itertools = "0.11.0"

reqwest = { version = "0.11.18", features = ["blocking", "json"], optional = true }
form_urlencoded = "1.2.0"
base64 = "0.21.2"
hex = "0.4.3"

[dev-dependencies]
env_logger = "0.10.0"
dotenv = "0.15.0"

tokio = { version = "1.28.1", features = ["macros"] }

[features]
default = ["request_executor_impl"]
request_executor_impl = ["reqwest"]
