[package]
name = "mys_villa"
version = "0.3.0"
edition = "2021"
description = "provide simple access to villa openapi"
authors = ["Golden_Water"]
repository = "https://github.com/BillGoldenWater/mys_villa.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log"] }
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.2"

itertools = "0.12"

# region secret encrypt and verify
sha2 = "0.10"
hmac = "0.12"
rsa = { version = "0.9", features = ["sha2"] }

form_urlencoded = "1.2"
base64 = "0.21"
hex = "0.4"
# endregion

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json", "rustls-tls"]
optional = true
default-features = false

[dev-dependencies]

[features]
default = ["request_executor_impl"]
request_executor_impl = ["reqwest"]